--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 				<label for="message">Twitter:</label>
 				<textarea id="message" name="message" class="form-control" rows="3"></textarea>
 			</div>
-			<button id="add-button" type="submit" class="btn btn-default">Agregar</button>
+			<button id="add-button" type="submit" class="btn btn-default" >Agregar</button>
+			<p id="#alerta"><span id="character">140</span></p>
+
 		</form>
 	</section>
 	<section id="posts" class="container">
